--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "news-hub-backend",
+  "type": "module",
+  "name": "your_project_name",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0"
